<resources>
    <string name="app_name">Self School Scheduler</string>
    <string name="term_page_name">Your Terms</string>
    <string name="all_terms">All Terms</string>
    <string name="all_courses">All Courses</string>
    <string name="assessments">Assessments</string>
    <string name="all_mentors">All Mentors</string>
    <string name="empty_database">Empty Database</string>
    <string name="filler">Filler Text</string>
    <string name="course_term">Term:</string>
    <string name="course_start">Course Start: </string>
    <string name="dateFiller">1/1/20</string>
    <string name="course_end">Course End: </string>
    <string name="fillerTerm">1</string>
    <string name="course">Course: </string>
    <string name="ass_due_date">Due Date: </string>
    <string name="assessment_type">Type: </string>
    <string name="ass_types">Performance/Objective</string>
    <string name="filler_phone">555-555-5555</string>
    <string name="filler_email">email@email.com</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="term_title">Term Title</string>
    <string name="start_date">Start Date: </string>
    <string name="select_start_date">Click to Select Start Date</string>
    <string name="select_end_date">Click to Select End Date</string>
    <string name="save">Save</string>
    <string name="add_course">ADD COURSE</string>
    <string name="delete">DELETE</string>
    <string name="course_title">Course Title</string>
    <string name="course_status">Course Status:</string>
    <string name="add_note">ADD NOTE</string>
    <string name="course_mentor">Course Mentor</string>
    <string name="display_term">will display your term</string>
    <string name="will_display_status">will display status</string>
    <string name="edit">edit</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="note_title">Note Title</string>
    <string name="note_body">Note Body</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="assessment_start_date">Assessment Start Date</string>
    <string name="assessment_due_date">Assessment Due Date</string>
    <string name="click_to_select_due_date">Click to select due date</string>
    <string name="assessment_goal_date">Assessment Goal Date</string>
    <string name="assessment_types">Assessment Type</string>
    <string name="objective">Objective</string>
    <string name="performance">Performance</string>
    <string name="mentor_name">Mentor Name:</string>
    <string name="enter_mentor_name">Enter Mentor Name</string>
    <string name="mentor_phone_number">Mentor Phone Number:</string>
    <string name="mentor_email">Mentor Email:</string>
    <string name="enter_mentor_phone_number">Enter Mentor Phone Number</string>
    <string name="enter_mentor_email_address">Enter Mentor Email Address</string>
</resources>
