<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MentorAddEditActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_ass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mentor_name"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_mentor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_ass_title"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/enter_mentor_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mentor_name"
        android:paddingTop="20dp"
        android:text="@string/mentor_phone_number"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_mentor_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_due_date"
        android:gravity="bottom"
        android:hint="@string/enter_mentor_phone_number"
        android:padding="10dp"
        android:textSize="20sp"
        android:inputType="phone"/>

    <TextView
        android:id="@+id/title_goal_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mentor_phone"
        android:paddingTop="20dp"
        android:text="@string/mentor_email"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_mentor_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_goal_date"
        android:gravity="bottom"
        android:hint="@string/enter_mentor_email_address"
        android:padding="10dp"
        android:textSize="20sp"
        android:inputType="textEmailAddress"/>

</RelativeLayout>