<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical">
    <ImageButton
        android:id="@+id/btn_mentor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/tv_mentor_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="top"
            android:text="@string/filler"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/mentor_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mentor_name"
            android:text="@string/phone"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_mentor_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mentor_name"
            android:layout_toEndOf="@id/mentor_phone"
            android:layout_toRightOf="@id/mentor_phone"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="1dp"
            android:paddingRight="1dp"
            android:text="@string/filler_phone"
            android:textSize="20sp" />

        <TextView
        android:id="@+id/mentor_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mentor_phone"
        android:text="@string/email"
        android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_mentor_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mentor_phone"
            android:layout_toEndOf="@id/mentor_email"
            android:layout_toRightOf="@id/mentor_email"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="1dp"
            android:paddingRight="1dp"
            android:text="@string/filler_email"
            android:textSize="20sp" />


        <!--        android:layout_toEndOf="@id/textView_course_title"
                    android:layout_toRightOf="@id/textView_course_title" -->


    </RelativeLayout>

</androidx.cardview.widget.CardView>