<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".TermAddActivity">

    <EditText
        android:id="@+id/et_term_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/term_title"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="30sp" />
    <ImageView
        android:id="@+id/iv_spacer"
        android:layout_width="10dp"
        android:layout_height="40dp"
        android:layout_below="@id/et_term_title" />

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_calendar_dark"
        android:gravity="bottom"
        android:hint="@string/select_start_date"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_below="@id/iv_spacer"
        android:drawableRight="@drawable/ic_calendar_dark" />

    <TextView
        android:id="@+id/tv_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_calendar_dark"
        android:gravity="bottom"
        android:hint="@string/select_end_date"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_below="@id/tv_start_date"
        android:drawableRight="@drawable/ic_calendar_dark" />


</RelativeLayout>