<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssessmentAddEditActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_ass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assessment_title"
        android:textSize="30sp"/>

    <EditText

        android:id="@+id/et_assessment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assessment_title"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:layout_below="@+id/tv_ass_title"/>

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_assessment_title"
        android:text="@string/assessment_start_date"
        android:textSize="30sp"
        android:paddingTop="20dp"/>

    <TextView
        android:id="@+id/tv_select_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_start_date"
        android:drawableEnd="@drawable/ic_calendar_dark"
        android:drawableRight="@drawable/ic_calendar_dark"
        android:drawableTint="@color/colorPrimaryDark"
        android:gravity="bottom"
        android:hint="@string/select_start_date"
        android:padding="10dp"
        android:textSize="20sp" />


</RelativeLayout>