<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".CourseDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/top_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_course_edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_title"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="30sp" />


                <TextView
                    android:id="@+id/tv_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_course_edit_title"
                    android:drawableEnd="@drawable/ic_calendar_dark"
                    android:drawableRight="@drawable/ic_calendar_dark"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:gravity="bottom"
                    android:hint="@string/select_start_date"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_start_date"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:gravity="bottom"
                    android:hint="@string/select_end_date"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:drawableRight="@drawable/ic_calendar" />

                <LinearLayout
                    android:id="@+id/ll_course_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_end_date"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:id="@+id/tv_course_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:text="@string/course_status"
                        android:textSize="20sp"
                        android:layout_marginRight="8dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_course_status_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/display_term"
                        android:layout_gravity="center_vertical"
                        android:textSize="20sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_course_term"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_course_status"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:id="@+id/tv_course_term"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:text="@string/course_term"
                        android:textSize="20sp"
                        android:layout_marginRight="8dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_course_term_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/display_term"
                        android:layout_gravity="center_vertical"
                        android:textSize="20sp"/>


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_course_term"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/tv_mentor_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="Mentor:"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_mentor_for_course"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_anchorGravity="center"
                        android:layout_below="@+id/tv_mentor_title" />

                </RelativeLayout>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_note_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top_layout"
                android:paddingTop="10dp">
                <TextView
                    android:id="@+id/tv_course_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="Course Notes:"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_note_for_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_anchorGravity="center"
                    android:layout_below="@+id/tv_course_notes"/>


            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/efab_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:background="@color/colorPrimaryLight"
        android:elevation="6dp"
        android:gravity="center"
        android:padding="5dp"
        android:paddingStart="1dp"
        android:paddingEnd="12dp"
        android:text="@string/add_note"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/colorPrimaryLight"
        app:icon="@drawable/ic_add"
        app:rippleColor="@color/colorPrimary"
        android:layout_alignParentRight="true"
        android:paddingLeft="1dp"
        android:paddingRight="12dp" />


</RelativeLayout>

